# gd

./: Cargo.toml  README.md
src/: auth.rs  client.rs  cow.rs  credentials.rs  lib.rs  thunk.rs
src/crypto/: aes.rs  base64.rs  utf8.rs
src/entities/: artist.rs  base.rs  mod.rs  song.rs  user.rs
src/http/: client.rs  mod.rs
src/internals/: constants.rs  http.rs  mod.rs  session.rs
src/internals/requests/: base.rs
src/internals/responses/: mod.rs  reference.rs
src/internals/robtop/: mod.rs  traits.rs
src/internals/serde/de/: mod.rs
src/internals/serde/ser/: mod.rs
src/primitives/: mod.rs  version.rs
